movido boton flotante
agregado estilo que permite mover el botón

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5291,6 +5291,15 @@ button.btn-floating {
   z-index: 997;
 }
 
+.fixed-action-btn-mod {
+  position: fixed;
+  right: 23px;
+  bottom: 223px;
+  padding-top: 15px;
+  margin-bottom: 0;
+  z-index: 997;
+}
+
 .fixed-action-btn.active ul {
   visibility: visible;
 }
