--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,12 @@ input[type=button]{
 .hr-repos{
     border-color: dodgerblue;
 }
+
+.fixed-action-btn-mod {
+  position: fixed;
+  right: 23px;
+  top: 120px;
+  padding-top: 15px;
+  margin-bottom: 0;
+  z-index: 997;
+}
